[gd_scene load_steps=10 format=2]

[ext_resource path="res://Bomb/explosion.gd" type="Script" id=1]
[ext_resource path="res://addons/Line3D/Line3D.gd" type="Script" id=2]
[ext_resource path="res://Bomb/bomb.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bomb/laser.png" type="Texture" id=5]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_texture = ExtResource( 5 )

[sub_resource type="BoxShape" id=5]

[node name="explosion" type="Spatial"]
script = ExtResource( 1 )

[node name="explosionRays" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985997, 0 )
visible = false

[node name="RayCastZPlus" type="RayCast" parent="explosionRays"]
cast_to = Vector3( 0, -1, 1 )

[node name="RayCastZNeg" type="RayCast" parent="explosionRays"]
cast_to = Vector3( 0, -1, -1 )

[node name="RayCastXPlus" type="RayCast" parent="explosionRays"]
cast_to = Vector3( 1, -1, 0 )

[node name="RayCastXNeg" type="RayCast" parent="explosionRays"]
cast_to = Vector3( -1, -1, 0 )

[node name="hitRays" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.985997, 0 )
visible = false

[node name="RayCastXP" type="RayCast" parent="hitRays"]
cast_to = Vector3( 1, -1, 0 )
collision_mask = 0

[node name="RayCastXN" type="RayCast" parent="hitRays"]
cast_to = Vector3( -1, -1, 0 )
collision_mask = 0

[node name="RayCastZP" type="RayCast" parent="hitRays"]
cast_to = Vector3( 0, -1, 1 )
collision_mask = 0

[node name="RayCastZN" type="RayCast" parent="hitRays"]
cast_to = Vector3( 0, -1, -1 )
collision_mask = 0

[node name="LineXPlus" type="ImmediateGeometry" parent="."]
visible = false
material_override = SubResource( 1 )
script = ExtResource( 2 )
end_point = Vector3( 0, 0, 0 )
width = 0.8
end_point_node = NodePath("../LineXPlusEnd")

[node name="LineXNeg" type="ImmediateGeometry" parent="."]
visible = false
material_override = SubResource( 2 )
script = ExtResource( 2 )
end_point = Vector3( 0, 0, 0 )
width = 0.8
end_point_node = NodePath("../LineXNegEnd")

[node name="LineZPlus" type="ImmediateGeometry" parent="."]
visible = false
material_override = SubResource( 3 )
script = ExtResource( 2 )
end_point = Vector3( 0, 0, 0 )
width = 0.8
end_point_node = NodePath("../LineZPlusEnd")

[node name="LineZNeg" type="ImmediateGeometry" parent="."]
visible = false
material_override = SubResource( 4 )
script = ExtResource( 2 )
end_point = Vector3( 0, 0, 0 )
width = 0.8
end_point_node = NodePath("../LineZNegEnd")

[node name="LineZPlusEnd" type="Position3D" parent="."]

[node name="LineZNegEnd" type="Position3D" parent="."]

[node name="LineXPlusEnd" type="Position3D" parent="."]

[node name="LineXNegEnd" type="Position3D" parent="."]

[node name="Bomb" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="bomb" parent="Bomb" instance=ExtResource( 3 )]

[node name="bombTimer" type="Timer" parent="."]
one_shot = true

[node name="explosionTimer" type="Timer" parent="."]

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 5 )

[connection signal="timeout" from="bombTimer" to="." method="_on_bombTimer_timeout"]
[connection signal="timeout" from="explosionTimer" to="." method="_on_explosionTimer_timeout"]
